remove cursor follower

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ const cards = [
 ]
 ---
 <LayoutPage title="Mathieu Chavanel - Portfolio" >
-	<CursorFollower client:load ></CursorFollower>
+	<!-- <CursorFollower client:load ></CursorFollower> -->
 	<Header title={["Accueil", "Projets", "Contact"]} href={["/", "/#projectHighlight", "/#contact"]}></Header>
 	<div id="home" class=" flex w-full h-screen flex-col-reverse max-md:content-center max-md:h-fit">
 
