--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import CursorFollower from '../components/CursorFollower.svelte'
 import type { idText } from 'typescript';
 
 const cards = [
-	{ title: "Arcania", body: "Dans Arcania transformer votre telephone en veritable baguette magique et combattez vos amies dans l'arene" ,href: "https://github.com/math-pixel/ARCANIA", thumbnail : "/images/arcania.png",
+	{ title: "Arcania", body: "Dans Arcania transformer votre téléphone en véritable baguette magique et combattez vos amis dans l'arène." ,href: "https://github.com/math-pixel/ARCANIA", thumbnail : "/images/arcania.png",
 		techno: [
 			{"img" : "/images/languages/html.png"},
 			{"img" : "/images/languages/p5.png"},
@@ -20,7 +20,7 @@ const cards = [
 			{"img" : "/images/languages/socketio.png"},
 		]
 	},
-	{ title: "Masaru's Adventure", body: "Aidez Masarus à retrouver le shamizen sacré pour sauvez l'île de Kyushu. " ,href: "https://github.com/math-pixel/Masarus-Adventure", thumbnail : "/images/masarus.png",
+	{ title: "Masaru's Adventure", body: "Aidez Masaru à retrouver le shamizen sacré pour sauvez l'île de Kyushu. " ,href: "https://github.com/math-pixel/Masarus-Adventure", thumbnail : "/images/masarus.png",
 		techno: [
 			{"img" : "/images/languages/html.png"},
 			{"img" : "/images/languages/p5.png"},
@@ -28,7 +28,7 @@ const cards = [
 			{"img" : "/images/languages/css.png"}
 		]
 	},
-	{ title: "Imprimante 3D", body: "En quêtes de savoir, j'ai voulue construire moi meme une imprimante 3D pour connaitre les moindres details de ces machines" ,href: "", thumbnail : "/images/3dprint.png",
+	{ title: "Imprimante 3D", body: "En quête de savoir, j'ai voulu construire moi-même une imprimante 3D afin de connaître les moindres détails de ces machines." ,href: "", thumbnail : "/images/3dprint.png",
 		techno: [
 			{"img" : "/images/languages/rpi.png"},
 			{"img" : "/images/languages/octo.png"},
@@ -36,13 +36,13 @@ const cards = [
 			{"img" : "/images/languages/tool.png"},
 		]
 	},
-	{ title: "Reveil Intelligent", body: "Allo Jarvis ? Reveil 8H demain ! Un reveil fabriquer en python booster a l'ia et structure grace a de la POO " ,href: "https://github.com/IlanOu/Reveil", thumbnail : "/images/clock.png",
+	{ title: "Reveil Intelligent", body: "Allo Jarvis ? Réveil à 8h demain ! Un réveil fabriqué en python, boosté à l'IA et structuré en POO (Programmation Orienter Objet)." ,href: "https://github.com/IlanOu/Reveil", thumbnail : "/images/clock.png",
 		techno: [
 			{"img" : "/images/languages/rpi.png"},
 			{"img" : "/images/languages/python.png"},
 			{"img" : "/images/languages/ia.png"}
 		]
-	},{ title: "Photo Party", body: "Cheeez ! Photo Party est une application de soiree pour partager ses photos \n Le principe est simple. Tu prend une photos sur ton telephone via une app web puis tu admires ta photos et celle de tes amis sur le video projecteur de la soiree ! " ,href: "https://github.com/math-pixel/Photo-Party", thumbnail : "/images/photo party.png",
+	},{ title: "Photo Party", body: "Cheeez ! Photo Party est une application de soirée pour partager ses photos. Le principe est simple : tu prends une photos sur ton téléphone, via une app web puis tu admires ta photo et celles de tes amis sur le vidéo projecteur de la soirée !" ,href: "https://github.com/math-pixel/Photo-Party", thumbnail : "/images/photo party.png",
 		techno: [
 			{"img" : "/images/languages/html.png"},
 			{"img" : "/images/languages/nodejs.png"},
@@ -59,10 +59,10 @@ const cards = [
 
 		<div class="  absolute left-[5%] top-[30%] flex flex-col overflow-visible max-md:relative max-md:overflow-hidden">
 			<h1 class="text-7xl font-semibold ">Mathieu Chavanel</h1>
-			<h2 class="text-5xl font-light">Developpeur Creatif</h2>
+			<h2 class="text-5xl font-light"> Développeur Créatif</h2>
 			<p class="text-2xl font-thin mt-8 max-w-[68%] max-md:max-w-[95%] ">
-				Salut ! Je suis un développeur passionné et surtout curieux sur le monde qui nous entoure. 
-				<br>J'adore me lancer des nouveaux défis et apprendre de nouvelle compétences !
+				Salut ! Je suis un développeur passionné et surtout curieux du monde monde qui nous entoure. 
+				<br>J'adore me lancer de nouveaux défis et apprendre de nouvelle compétences !
 				<br>Et quand je ne code pas, vous me trouverez probablement en train de faire du sport, de bricoler ou de jouer au dernier jeu vidéo !
 				<br>
 				<br>
@@ -77,7 +77,7 @@ const cards = [
 			<img src="/images/prof.png" alt="image profile" class=" object-cover rounded-[100%] w-[450px] max-md:hidden">
 
 			<div class="bg-[#BCFFF7] absolute left-[5%] top-[80%] rounded-[10px] -rotate-[7deg] max-md:hidden">
-				<p class="font-normal text-[30px] py-[8px] px-[16px] whitespace-nowrap max-md:text-[20px]">A la recherche d'une alternance</p>
+				<p class="font-normal text-[30px] py-[8px] px-[16px] whitespace-nowrap max-md:text-[20px]">À la recherche d'une alternance</p>
 			</div>
 		</div>
 
@@ -86,7 +86,7 @@ const cards = [
 		</div>
 	</div>
 
-	<h1 id="projectHighlight" class=" w-full my-[5%] font-black text-6xl text-center">Projets à la une !</h1>
+	<h1 id="projectHighlight" class=" w-full my-[5%] font-black text-6xl text-center">Projets à la une</h1>
 	
 	<div class="overflow-visible flex w-full flex-wrap justify-center">
 		
@@ -95,31 +95,32 @@ const cards = [
 		))}
 	</div>
 
-	<h1 class=" w-full my-[5%] font-black text-6xl text-center">Contact</h1>
+	<!-- <h1 class=" w-full my-[5%] font-black text-6xl text-center">Contact</h1> -->
 	
-	<div id="contact" class="overflow-visible w-full h-screen  relative max-md:h-fit max-md:overflow-x-hidden">
+	<div id="contact" class="mt-40 global-color m-auto overflow-visible w-full h-[20vh] flex justify-evenly items-center relative max-md:h-fit max-md:overflow-x-hidden">
 
-		<div class=" w-[40%] ml-[40%] h-full flex flex-col justify-center overflow-visible max-md:m-0 max-md:w-full max-md:h-fit max-md:mt-20 max-md:ml-[10%]">
+		<!-- <img src="/images/Nice-05.jpg" alt="" class="w-auto h-[60%] rounded-[16px] max-md:hidden"> -->
+
+
+		<div class=" w-[40%] flex justify-around overflow-visible max-md:m-0 max-md:w-full max-md:h-fit max-md:mt-20 max-md:ml-[10%]">
 			
 			<a href="https://github.com/math-pixel" target="_blank" class=" flex">
-				<img alt="icon de github" src="/images/github icon.png" class=" w-[20%]">
-				<h1 class=" m-6 my-auto font-medium text-5xl text-center">GitHub</h1>
+				<img alt="icon de github" src="/images/icons/github.png" class=" w-[100%]">
+				<!-- <h1 class=" m-6 my-auto font-medium text-5xl text-center">GitHub</h1> -->
 			</a>
 
 			<a href="mailto:mathcb74@gmail.com" target="_blank" class=" flex">
-				<img alt="icon de mail" src="/images/mail icon.png" class=" w-[20%]">
-				<h1 class=" m-6  my-auto font-medium text-5xl text-center">Mail</h1>
+				<img alt="icon de mail" src="/images/icons/mail.png" class=" w-[100%]">
+				<!-- <h1 class=" m-6  my-auto font-medium text-5xl text-center">Mail</h1> -->
 			</a>
 
 			<a href="https://www.linkedin.com/in/mathieu-chavanel-50488b251/" target="_blank" class=" flex">
-				<img alt="icon de linkedin" src="/images/linkedin icon.png" class=" w-[20%]">
-				<h1 class=" m-6  my-auto font-medium text-5xl text-center">Linkedin</h1>
+				<img alt="icon de linkedin" src="/images/icons/linkedin.png" class=" w-[100%]">
+				<!-- <h1 class=" m-6  my-auto font-medium text-5xl text-center">Linkedin</h1> -->
 			</a>
 
 		</div>
 
-		<img src="/images/toto.png" alt="" class="w-[20%] absolute top-[2%] left-[8%] rounded-[16px] max-md:hidden">
-		<img src="/images/photographie.png" alt="" class="w-[20%] absolute bottom-[2%] right-[8%] rounded-[16px] max-md:hidden">
 
 	</div>
 
