--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,8 +58,8 @@ const cards = [
 	<div id="home" class=" flex w-full h-screen flex-col-reverse max-md:content-center max-md:h-fit">
 
 		<div class="  absolute left-[5%] top-[30%] flex flex-col overflow-visible max-md:relative max-md:overflow-hidden">
-			<h1 class="text-7xl font-semibold ">Mathieu Chavanel</h1>
-			<h2 class="text-5xl font-light"> Développeur Créatif</h2>
+			<h1 class="text-7xl font-semibold max-md:text-5xl">Mathieu Chavanel</h1>
+			<h2 class="text-5xl font-light max-md:text-3xl"> Développeur Créatif</h2>
 			<p class="text-2xl font-thin mt-8 max-w-[68%] max-md:max-w-[95%] ">
 				Salut ! Je suis un développeur passionné et surtout curieux du monde monde qui nous entoure. 
 				<br>J'adore me lancer de nouveaux défis et apprendre de nouvelle compétences !
@@ -72,7 +72,7 @@ const cards = [
 		
 		
 		<!-- <a href="" class=" absolute bottom-[10%] left-1/2">arrow</a> -->
-		<div class="absolute right-[5%] top-[20%] overflow-visible max-md:relative">
+		<div class="absolute right-[5%] top-[20%] overflow-visible z-[-1]">
 
 			<img src="/images/prof.png" alt="image profile" class=" object-cover rounded-[100%] w-[450px] max-md:hidden">
 
@@ -86,7 +86,7 @@ const cards = [
 		</div>
 	</div>
 
-	<h1 id="projectHighlight" class=" w-full my-[5%] font-black text-6xl text-center">Projets à la une</h1>
+	<h1 id="projectHighlight" class=" w-full my-[5%] font-black text-6xl text-center max-md:text-5xl">Projets à la une</h1>
 	
 	<div class="overflow-visible flex w-full flex-wrap justify-center">
 		
@@ -102,7 +102,7 @@ const cards = [
 		<!-- <img src="/images/Nice-05.jpg" alt="" class="w-auto h-[60%] rounded-[16px] max-md:hidden"> -->
 
 
-		<div class=" w-[40%] flex justify-around overflow-visible max-md:m-0 max-md:w-full max-md:h-fit max-md:mt-20 max-md:ml-[10%]">
+		<div class=" w-[40%] flex justify-around overflow-visible max-md:w-full max-md:h-fit max-md:m-1	0">
 			
 			<a href="https://github.com/math-pixel" target="_blank" class=" flex">
 				<img alt="icon de github" src="/images/icons/github.png" class=" w-[100%]">
